--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <script type='text/javascript' src='pyramids.js'></script>
   </head>
   <body>
-    <div class="container grid" id="stats"
+  <header>
+    <h1>Pyramids</h1>
+    <a href="https://racoonsmakeokayfriends.github.io"><i class="fa fa-home"></i></a>
+  </header>
+    <div class="container grid" id="stats">
       <label># cards left in pile:</label>
       <span id="cards_left">23</span>
     </div>
