--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel='stylesheet' type='text/css' href='pyramids.css'/>
     <link href="assets/favicon.ico" rel="icon" type="image/x-icon" />
     <link rel='stylesheet' type='text/css' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css'/>
-    <script type='text/javascript' src='http://code.jquery.com/jquery-2.1.0.min.js'></script>
+    <script type='text/javascript' src='https://code.jquery.com/jquery-2.1.0.min.js'></script>
     <script type='text/javascript' src='pyramids.js'></script>
   </head>
   <body>
