added alt text to cards

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
   <body>
   <header>
     <h1>Pyramids</h1>
-    <a href="https://racoonsmakeokayfriends.github.io"><i class="fa fa-home"></i></a>
+    <a href="https://racoonsmakeokayfriends.github.io" alt="home"><i class="fa fa-home"></i></a>
   </header>
     <div class="container grid" id="stats">
       <label># cards left in pile:</label>
       <span id="cards_left">23</span>
     </div>
     <div class="container">
-      <div class="pile squared" id="stock">
+      <div class="pile squared" id="stock" alt="stock-pile">
       </div>
-      <div class="pile squared" id="waste">
+      <div class="pile squared" id="waste" alt="waste-pile">
       </div>
     </div>
     <div class="container" id="pyramid_board">
     </div>
 
-    <button id="start_btn">start</button>
+    <button id="start_btn">start game</button>
   </body>
 </html>
